# shininglore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
Assets/Event/: 010823.EVT  ECTS_BATTLE.EVT  ECTS_TOWN.EVT  ECTS_TOWN_RELEASE.EVT  HOHOHO.EVT  NIYAAONG_BACK00.EVT  NIYAAONG_BACK110.EVT  T3.EVT  TEST.EVT  TEST2.EVT  TEST_666.EVT
Assets/Misc/: ABILITY_CLIENT.SOX  ABILITY_PART2.SOX  BAN_NAME_WORD_LIST.SOX  CAFEFOOD.SOX  COMBO_PROBABILITY.SOX  CONDITION_ACTION.SOX  CONVERSION.SOX  DAMAGE_SOUND.SOX  EMOTION_LIST.SOX  EVENTDEFFUNCCLIENT.SOX  EVENTDEFFUNCSERVER.SOX  EXPERIENCE.SOX  EXTERNAL_JAMMING_LIST.SOX  GLOBALCLIENTEVENT.NGC  GLOBALSERVEREVENT.NGS  HAIRSTYLE.SOX  HAIR_COLOR.SOX  HAIR_STYLIST.SOX  INTERIOR_FURNITURE.SOX  INTERIOR_ROOM.SOX  ITEMTABLE.SOX  ITEM_BASE_ATTACK.SOX  ITEM_CLOTHES.SOX  ITEM_COMBINATION.SOX  ITEM_EDIBLE.SOX  ITEM_ETC.SOX  ITEM_MODIFIER.SOX  ITEM_PET_FOOD.SOX  ITEM_SET.SOX  ITEM_WEAPON.SOX  JOB_REFERENCE.SOX  LEVELUP_ABILITY.SOX  LEVEL_DIFF_EXP.SOX  LVUP_DB.SOX  LV_DB.SOX  LV_EXT_DB.SOX  MAP_CONTINENT.SOX  MERCHANT.SOX  MERCHANT2.SOX  MINIGAME_INTERFACE.SOX  (+43 more)
Assets/Zone/: 101.MAP  101.NEC  101.NES  101.SLL  101LIGHT.LIGHT  102.MAP  102.NES  102.SLL  102LIGHT.LIGHT  103.MAP  103.NES  103.SLL  104.MAP  104.NEC  104.NES  104.SLL  105.MAP  105.NEC  105.NES  105.SLL  106.MAP  106.NES  106.SLL  106LIGHT.LIGHT  107.MAP  107.NES  107.SLL  108.MAP  (+169 more)
bwx/: Cargo.toml
client/: Cargo.toml
client/src/: main.rs  shader.wgsl
sl/: Cargo.toml
sl_asset/: Cargo.toml
sl_client/: Cargo.toml
sl_client/src/: main.rs
src/: bwx.rs  main.rs
(+10354 files in other folders)
